@@ -7140,6 +7140,47 @@ code   symbol                                    description
 
 The UPnP errors are declared in the ``libtorrent::upnp_errors`` namespace.
 
+HTTP errors are reported in the ``libtorrent::http_category``, with error code enums in
+the ``libtorrent::errors`` namespace.
+
+====== =========================================
+code   symbol                                   
+====== =========================================
+100    cont                                     
+------ -----------------------------------------
+200    ok                                       
+------ -----------------------------------------
+201    created                                  
+------ -----------------------------------------
+202    accepted                                 
+------ -----------------------------------------
+204    no_content                               
+------ -----------------------------------------
+300    multiple_choices                         
+------ -----------------------------------------
+301    moved_permanently                        
+------ -----------------------------------------
+302    moved_temporarily                        
+------ -----------------------------------------
+304    not_modified                             
+------ -----------------------------------------
+400    bad_request                              
+------ -----------------------------------------
+401    unauthorized                             
+------ -----------------------------------------
+403    forbidden                                
+------ -----------------------------------------
+404    not_found                                
+------ -----------------------------------------
+500    internal_server_error                    
+------ -----------------------------------------
+501    not_implemented                          
+------ -----------------------------------------
+502    bad_gateway                              
+------ -----------------------------------------
+503    service_unavailable                      
+====== =========================================
+
 translating error codes
 -----------------------
 
